# ubion

./: README.md
python/250226/: variable.ipynb
python/250227/: class.ipynb
python/250228/: class.ipynb
python/250304/: 01_class.ipynb
python/250307/: 01_datetime.ipynb
python/250310/: 01_concat,merge.ipynb
python/250311/: test.csv
python/250312/: 01_crawlling.ipynb  02_selenium.ipynb
python/250313/: 005930 report 2025-03-13.csv  미국 클리블랜드 소.csv  미국 톰슨로이터 입.csv  캐나다 톰슨 로이터.csv
python/250317/: .env  pymysql.ipynb
python/250318/: .env  01_mysql.ipynb  database.py
python/250321/: app.py
python/250324/: bnh.py  bollinger.ipynb  buyandhold.ipynb  mod_test.ipynb
python/250325/: halloween.ipynb  invest.ipynb
python/250326/: mod_test.ipynb
python/250328/: momentum2.py  momentumtest.ipynb
python/250402/: 01_card.ipynb  02_이상치.ipynb
python/250403/: 01_스케일링.ipynb  02_데이터불균형처리.ipynb  03_ 회귀분석.ipynb  04_분류분석.ipynb
python/250404/: 01_mongodb.ipynb  02.데이터수집.ipynb  test.bat  test.py  환율.csv  환율csv
python/250407/: 01_총 정리.ipynb
금융 도메인/: 금융트렌드 변화.txt
머신러닝/: AdaptiveRAG_구현.ipynb  LLM실습_1.ipynb  langgraph를이용한RAG.ipynb  langgraph를이용한RAG_완성.ipynb  신경망,_RNN_Transformer_Word2Vec.ipynb  자연어처리기초.ipynb
머신러닝/Langchain/: DocumentsLoader_vectorDB.ipynb  강의요약AA.docx  주민등록 인구 및 세대현황.csv
머신러닝/faq_documents_rag/: RetrievalQA.py  RetrievalQA_all.py  main.py  pyproject.toml  utils.py
머신러닝/finance_bigdata_lecture/: Advertising_EDA.py  Advertising_LR.py  Advertising_Outlier.py  Advertising_Scaling.py  Advertising_VIF.py  Country_data_PCA.py  (+7 more)
통계와 수학/: 통계와수학.txt
(+54 files in other folders)
