[project]
name = "faq-documents-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.59",
    "langchain-google-genai>=2.1.4",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.16",
    "load-dotenv>=0.1.0",
    "plotly>=6.0.1",
    "pymupdf>=1.25.5",
    "streamlit>=1.45.0",
    "torch>=2.7.0",
]
